Did some TODOs, also added the appendix on random matrix generation

--- a/Code/Tests/Plot_examples_move.ipynb
+++ b/Code/Tests/Plot_examples_move.ipynb
@@ -211,14 +211,19 @@
     "plt.figtext(0.3,0.72,'Iteration',rotation=-45,\\\n",
     "                         horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
     "\n",
-    "s = 1.75\n",
-    "axins = ax_dimsout.inset_axes([-2.55, 0.25,s*4.8/5,s*20/48])\n",
+    "s = 2\n",
+    "axins = ax_dimsout.inset_axes([-2.75, 0.25,s*4.8/5,s*20/48])\n",
     "#axins.imshow(Z2, extent=extent, origin=\"lower\")\n",
     "# sub region of the original image\n",
     "x1, x2, y1, y2 = 0.2, 4.8, 34-0.5, 14-0.5\n",
     "O = np.zeros((len(m_in)+1,3**len(m_in)))\n",
     "for i in range(len(m_in)):\n",
     "    O[i+1:] += np.repeat(np.array([m_in[i],0,-m_in[i]]*3**(len(m_in)-i-1)),3**(i)).reshape(1,-1)\n",
+    "\n",
+    "axins.plot(np.repeat(np.arange(din_cum.shape[1]+1),2)[1:-1]+angl,\n",
+    "           24+np.repeat(O,2,axis=0)-0.5,\n",
+    "                  linestyle=':',color='0.3',linewidth=1)\n",
+    "O=np.clip(O,None,6)\n",
     "axins.plot(np.repeat(np.arange(din_cum.shape[1]+1),2)[1:-1]+angl,\n",
     "           24+np.repeat(O,2,axis=0)-0.5,\n",
     "                  linestyle='solid',color='0.3',linewidth=1)\n",
