--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -733,3 +733,14 @@ numpages = {10}
 	keywords = {Singular value decomposition, Sequential updating, Subspace tracking, update {SVD}},
 	file = {ScienceDirect Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/N5D86QZ6/Brand - 2006 - Fast low-rank modifications of the thin singular v.pdf:application/pdf;ScienceDirect Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/9TTM757R/S0024379505003812.html:text/html},
 }
+
+@article{mezzadri_how_2007,
+	title = {How to generate random matrices from the classical compact groups},
+	volume = {54},
+	issn = {0002-9920},
+	pages = {592--604},
+	number = {5},
+	journaltitle = {Notices of the American Mathematical Society},
+	author = {Mezzadri, Francesco},
+	date = {2007-05},
+}
