--- a/Thesis/masterthesis.tex
+++ b/Thesis/masterthesis.tex
@@ -91,6 +91,8 @@
 \newcommand{\lsearchud}{l^\text{out}}
 \newcommand{\lsearchrl}{l^\text{in}}
 
+\newcommand{\en}{\text{end}}
+
 
 %some shortcuts for things that might change
 \newcommand{\m}{\triangledown} %indexing for moved inputs/outouta
@@ -127,7 +129,6 @@
 
 \tableofcontents
 
-60-80 pages total
 
 % Please compile this example document including the bibliography
 % database. Check the resulting document and the references for 
@@ -241,7 +242,25 @@ and
 \begin{equation}
 a_{[i:]} = [a_i, a_{i+1}, \dots ,a_n]\phantom{a_i}
 \end{equation}
-This can analogously be used for a matrix. Here $A_{[i,j]}$ denotes the $j$-th element in the $i$-th row.
+To index the last element i use the notation $a_{[\en]}]$ and to index elements from the end, I will use the notation 
+\begin{equation}
+	a_{[\en-i]} = a_{n-i}
+\end{equation}
+These notations can analogously be used for a matrix. Here $A_{[i,j]}$ denotes the $j$-th element in the $i$-th row.
+
+To increase understand ability, I will in some cases assign to block matrices similar to 
+\begin{equation}
+	\begin{bmatrix}
+	X\\Y 
+	\end{bmatrix}
+	\gets
+	Z
+\end{equation}
+This is a shorthand for 
+\begin{align}
+	X&\gets Z_{[:i,:]} & Y& \gets Z_{[i+1:,:]}
+\end{align}
+with an index $i$ that will be clear form the context.
 
 
 \chapter{Literature Review}\label{chap:lit}
@@ -1446,14 +1465,14 @@ The algorithms are constructed such that they also preserve the minimality of th
 	\begin{algorithmic}
 		\Input{System $\Sigma_{[A,B,C,D]}$, Index $k$, Tolerance $\text{tol}$ }
 		\Output{System $\Sigma_{[A,B,C,D]}$ with changed input dimensions}
-		\State $b \gets B_{k[:,-1]}$
-		\State $D_k \gets D_{k[:,:-2]}$
-		\State $B_k \gets B_{k[:,:-2]}$
+		\State $b \gets B_{k[:,\en]}$
+		\State $D_k \gets D_{k[:,:\en-1]}$
+		\State $B_k \gets B_{k[:,:\en-1]}$
 		\State $D_{k+1} \gets [C_{k+1}b,D_{k+1}]$
 		\State $B_{k+1} \gets [A_{k+1}b,B_{k+1}]$
 		\State $U,\sigma,V^\top \gets$ SVD$([A_k,B_k],\text{econ}=\text{True})$ 
-		\If{$\sigma_{[-1]} < \text{tol}$}
-		\State $U \gets U_{[:,:-2]}$; $\sigma \gets \sigma_{[:-2]}$; $V \gets V_{[:-2,:]}$
+		\If{$\sigma_{[\en-1]} < \text{tol}$}
+		\State $U \gets U_{[:,:\en-1]}$; $\sigma \gets \sigma_{[:\en-1]}$; $V \gets V_{[:,:\en-1]}$
 		%\State $U \gets U[:,:-2]$
 		%\State $\sigma \gets \sigma[:-2]$
 		%\State $V \gets V[:-2,:]$
@@ -1519,8 +1538,8 @@ The pseudocode to move the boundary to the left is given in Algorithm\,\ref{alg:
 		\State $D_k \gets \begin{bmatrix} D_k\\c^\top B_k	\end{bmatrix}$
 		\State $C_k \gets \begin{bmatrix} C_k\\c^\top A_k	\end{bmatrix}$
 		\State $U,\sigma,V^\top \gets$ SVD$\left(\begin{bmatrix} A_{k+1}\\C_{k+1}	\end{bmatrix},\text{econ}=\text{True}\right)$ 
-		\If{$\sigma[-1] < \text{tol}$}
-		\State $U \gets U_{[:,:-2]}$; $\sigma \gets \sigma_{[:-2]}$; $V \gets V_{[:-2,:]}$
+		\If{$\sigma_{[\en]} < \text{tol}$}
+		\State $U \gets U_{[:,:\en-1]}$; $\sigma \gets \sigma_{[:\en-1]}$; $V \gets V_{[:,:\en-1]}$
 		%\State $U \gets U[:,:-2]$
 		%\State $\sigma \gets \sigma[:-2]$
 		%\State $V \gets V[:-2,:]$
@@ -1719,10 +1738,10 @@ This connection is drawn with a dotted line in Figure\,\ref{fig:move_right}.
 	\begin{algorithmic}
 		\Input{System $\Sigma_{[A,B,C,D]}$, Index $k$, Tolerance $\text{tol}_r$ } 
 		\Output{System $\Sigma_{[A,B,C,D]}$ with changed  output dimensions}
-		\State $c^\top \gets C_{k[-1,:]}$
-		\State $d^\top \gets D_{k[-1,:]}$
-		\State $C_{k} \gets C_{k[:-2,:]}$
-		\State $D_{k} \gets D_{k[:-2,:]}$
+		\State $c^\top \gets C_{k[\en,:]}$
+		\State $d^\top \gets D_{k[\en,:]}$
+		\State $C_{k} \gets C_{k[:\en-1,:]}$
+		\State $D_{k} \gets D_{k[:\en-1,:]}$
 		\State $U,\sigma,V^\top \gets$ SVD$\left(\begin{bmatrix}
 		A_{k+1}^\top\\B_{k+1}^\top
 		\end{bmatrix}\right)$ 
@@ -1816,55 +1835,55 @@ The algorithm derived here can move the boundaries by arbitrary distances, as lo
 
 I will describe the algorithm to move the bounds left or right in this subsection.. 
 \todo[inline]{The algorithms for moving up or down will be omitted for brevity/Can be found in the appendix}
-The algorithm starts with an output normal system and transforms it into a ordered input normal system, by iterating over the stages from $k=2$ up to $K$.
+The algorithm starts with an output normal system and transforms it into a ordered input normal system, by iterating over the stages from $k=1$ up to $K$.
 
 
 \paragraph{Move Left}
-When moving the boundary between $u_{k-1}$ and $u_{k}$ to the left the distance $l$, the last $l$ columns of $\R_{k}$ are removed.
+When moving the boundary between $u_{k}$ and $u_{k+1}$ to the left the distance $l$, the last $l$ columns of $\R_{k+1}$ are removed.
 Based on this we have the new Hankel matrix
 \begin{equation}
-	\tilde{H}_k = \tilde{\Ob}_k \tilde{\R}_k = \Ob_{k}\R_{k[:,:-(l+1)]}
+	\tilde{H}_{k+1} = \tilde{\Ob}_{k+1} \tilde{\R}_{k+1} = \Ob_{k+1}\R_{k+1[:,:\en-l]}
 	.
 \end{equation}
 Using the decomposition from Equation\,\ref{eq:decomp_R} this becomes
 \begin{equation}
-	H_{k}=\Ob_{k}
+	\tilde{H}_{k}=\Ob_{k+1}
 	\begin{bmatrix}
-	A_{k-1}&B_{k-1[:,:-(l+1)]}
+	A_{k}&B_{k[:,:\en-l]}
 	\end{bmatrix}
 	\begin{bmatrix}
-	\R_{k-1} & 0\\ 0& \eye
+	\R_{k} & 0\\ 0& \eye
 	\end{bmatrix}
 	.
 \end{equation}
-If $\Ob_k^\top \Ob_k = \eye$ and $\R_{k-1} \R_{k-1}^\top = \eye$ then the singular values of the SVD of $\begin{bmatrix}
-A_{k-1}&B_{k-1[:,:-(l+1)]}
+If $\Ob_{k+1}^\top \Ob_{k+1} = \eye$ and $\R_{k} \R_{k}^\top = \eye$ then the singular values of the SVD of $\begin{bmatrix}
+A_{k}&B_{k[:,:\en-(l+1)]}
 \end{bmatrix}$ are the singular values of $H_k$.
 This is the case as the initial system is output normal and the previous stages were already transformed to input normal form.
-Based on the singular value decomposition, the stage can be transformed such that $\R_{k} \R_{k}^\top = \eye$.
+Based on the singular value decomposition, the stage can be transformed such that $\R_{k+1} \R_{k+1}^\top = \eye$.
 This also gives an ordered realization.
 The pseudocode can be found in Algorithm\,\ref{alg:move_left_sig}.
 
 \begin{algorithm}[htb]
 	\begin{algorithmic}
 	%\For{$k\gets 2$ \textbf{to} $K$}
-		\Input{System $\Sigma_{[A,B,C,D]}$ with $\Ob_k^\top \Ob_k = \eye$ and $\R_{k-1} \R_{k-1}^\top = \eye$,\\ \spaceIO
+		\Input{System $\Sigma_{[A,B,C,D]}$ with $\Ob_{k+1}^\top \Ob_{k+1} = \eye$ and $\R_{k} \R_{k}^\top = \eye$,\\ \spaceIO
 		Index $k$, Distance to move $l$, Tolerance $\text{tol}$} 
-		\Output{System $\Sigma_{[A,B,C,D]}$ with changed input dimensions and $\R_{k} \R_{k}^\top = \eye$, \\ \spaceIO 
+		\Output{System $\Sigma_{[A,B,C,D]}$ with changed input dimensions and $\R_{k+1} \R_{k+1}^\top = \eye$, \\ \spaceIO 
 			Hankel singular values $\sigma$}
-		\State $b \gets B_{k-1}[:,-l:]$
-		\State $D_{k-1} \gets D_{k-1}[:,:-(l+1)]$
-		\State $B_{k-1} \gets B_{k-1}[:,:-(l+1)]$
-		\State $D_{k} \gets [C_{k}b,D_{k}]$
-		\State $B_{k} \gets [A_{k}b,B_{k}]$
-		\State $U,\sigma,V^\top \gets$ reducedSVD$([A_{k-1},B_{k-1}],\epsilon=\text{tol})$ 
+		\State $b \gets B_{k[:,\en-l+1:]}$
+		\State $D_{k} \gets D_{k[:,:\en-l]}$
+		\State $B_{k} \gets B_{k[:,:\en-l]}$
+		\State $D_{k+1} \gets [C_{k+1}b,D_{k+1}]$
+		\State $B_{k+1} \gets [A_{k+1}b,B_{k+1}]$
+		\State $U,\sigma,V^\top \gets$ reducedSVD$([A_{k},B_{k}],\epsilon=\text{tol})$ 
 %		\State $r \gets $ count$(\sigma>\text{tol})$
 %		\State $U \gets U[:,:r]$
 %		\State $\sigma \gets \sigma[:r]$
 %		\State $V^\top \gets V^\top[:r,:]$
-		\State $[A_{k-1},B_{k-1}] \gets V^\top$
-		\State $A_{k}=A_{k}U\diag(\sigma)$
-		\State $C_{k}=C_{k}U\diag(\sigma)$
+		\State $[A_{k},B_{k}] \gets V^\top$
+		\State $A_{k+1}=A_{k+1}U\diag(\sigma)$
+		\State $C_{k+1}=C_{k+1}U\diag(\sigma)$
 	%\EndFor
 	\end{algorithmic}
 	\caption{Algorithm to move the boundary between $u_{k-1}$ and $u_{k}$ to the left by $l$ inputs}\label{alg:move_left_sig}
@@ -1872,83 +1891,83 @@ The pseudocode can be found in Algorithm\,\ref{alg:move_left_sig}.
 
 
 \paragraph{Move Right}
-When the bound is moved right by the distance $l$, this results in $l$ additional columns in $\R_k$.
+When the bound is moved right by the distance $l$, this results in $l$ additional columns in $\R_{k+1}$.
 Additional states are also required in most cases.
 Using the decomposition from Equation\,\ref{eq:decomp_R} and the structure from Equation\,\ref{eq:strucure_mover} the new Hankel matrix can be expressed as
 \begin{equation}
-	H_k = 
+	H_{k+1} = 
 	\begin{bmatrix}
-	\eye & 0\\ 0 &\Ob_{k+1}
+	\eye & 0\\ 0 &\Ob_{k+2}
 	\end{bmatrix}
 	\begin{bmatrix}
-	C_{k} & d\\
-	A_{k} & b
+	C_{k+1} & d\\
+	A_{k+1} & b
 	\end{bmatrix}
 	\begin{bmatrix}
 	\begin{bmatrix}
-	A_{k-1} \\
+	A_{k} \\
 	0
 	\end{bmatrix}&
 	\begin{bmatrix}
-		B_{k-1}&0\\
+		B_{k}&0\\
 		0&\eye
 	\end{bmatrix}
 	\end{bmatrix}
 	\begin{bmatrix}
-	\R_{k-1} & 0\\ 0& \eye
+	\R_{k} & 0\\ 0& \eye
 	\end{bmatrix}
 \end{equation}
-If $A_{k-1}$ and $B_{k-1}$ are transformed to input normal form analogous to Algorithm\,\ref{alg:inp_normal} this can be reduced to 
+If $A_{k}$ and $B_{k}$ are transformed to input normal form analogous to Algorithm\,\ref{alg:inp_normal} this can be reduced to 
 \begin{equation}
-H_k = 
+H_{k+1} = 
 \begin{bmatrix}
-\eye & 0\\ 0 &\Ob_{k+1}
+\eye & 0\\ 0 &\Ob_{k+2}
 \end{bmatrix}
 \begin{bmatrix}
 C_{k+1} & d\\
 A_{k+1} & b
 \end{bmatrix}
 \begin{bmatrix}
-\R_{k} & 0\\ 0& \eye
+\R_{k+1} & 0\\ 0& \eye
 \end{bmatrix}
 .
 \end{equation}
-The reachability matrix $\R_{k}$ fulfills $\R_{k} \R_{k}^\top = \eye$.
+The reachability matrix $\R_{k+1}$ fulfills $\R_{k+1} \R_{k+1}^\top = \eye$.
 Therefore the singular values of the SVD of $\begin{bmatrix}
 	C_{k+1} & d\\
 	A_{k+1} & b
 \end{bmatrix}$ are the singular values of the Hankel matrix.
 Using the SVD the system can also be reduced to a minimal system. 
-To preserve the input normality $A_{k-1}$ and $B_{k-1}$ are multiplied with $V^\top$. The combined matrices $[A_k^\top \quad C_k^\top]^\top$ are set to $U \Sigma$.
+To preserve the input normality $A_{k}$ and $B_{k}$ are multiplied with $V^\top$. The combined matrices $[C_k^\top \quad A_k^\top]^\top$ are set to $U \Sigma$.
 This results in the Algorithm\,\ref{alg:move_right_sig}.
 
 \begin{algorithm}[htb]
 	\begin{algorithmic}
-	\Input{System $\Sigma_{[A,B,C,D]}$ with $\Ob_k^\top \Ob_k = \eye$ and $\R_{k-1} \R_{k-1}^\top = \eye$,\\ \spaceIO
+	\Input{System $\Sigma_{[A,B,C,D]}$ with $\Ob_{k+1}^\top \Ob_{k+1} = \eye$ and $\R_{k} \R_{k}^\top = \eye$,\\ \spaceIO
 		Index $k$, Distance to move $l$, Tolerance $\text{tol}$ }
-	\Output{System $\Sigma_{[A,B,C,D]}$ with changed input dimensions and $\R_{k} \R_{k}^\top = \eye$,\\ \spaceIO
+	\Output{System $\Sigma_{[A,B,C,D]}$ with changed input dimensions and $\R_{k+1} \R_{k+1}^\top = \eye$,\\ \spaceIO
 		 Hankel singular values $\sigma$}
 	%\For{$k\gets 2$ \textbf{to} $K$}
-		\State $\Sigma_{[A,B,C,D]} \gets \text{input normal}_k(\Sigma_{[A,B,C,D]})$
-		\Comment Transform state $x_k$
-		\State $b \gets B_{k[:,:l]}$
-		\State $d \gets D_{k[:,:l]}$
-		\State $B_{k+1} \gets B_{k[:,l+1:]}$
-		\State $D_{k+1} \gets D_{k[:,l+1:]}$
+		\State $\Sigma_{[A,B,C,D]} \gets \text{input normal}_{k+1}(\Sigma_{[A,B,C,D]})$
+		\Comment Transform state $x_{k+1}$
+		\State $b \gets B_{k+1[:,:l]}$
+		\State $d \gets D_{k+1[:,:l]}$
+		\State $B_{k+1} \gets B_{k+1[:,l+1:]}$
+		\State $D_{k+1} \gets D_{k+1[:,l+1:]}$
 		\State $U,\sigma,V^\top \gets$ reducedSVD$\left(\begin{bmatrix}
 		C_{k+1}&d\\A_{k+1}&b
 		\end{bmatrix},\epsilon=\text{tol}\right)$  
-		\State $B_{k-1} \gets V^\top \begin{bmatrix}
-		B_{k-1} & 0\\
+		\State $B_{k} \gets V^\top \begin{bmatrix}
+		B_{k} & 0\\
 		0 & \eye
 		\end{bmatrix}$
-		\State $A_{k-1} \gets V^\top \begin{bmatrix}
-		A_{k-1} \\ 0
+		\State $A_{k} \gets V^\top \begin{bmatrix}
+		A_{k} \\ 0
 		\end{bmatrix}$
 		\State $\begin{bmatrix}
-		C_{k} \\ B_{k} 
+		C_{k+1} \\ B_{k+1} 
 		\end{bmatrix}  \gets U \diag(\sigma)$	
-		\State $D_ki \gets \begin{bmatrix}
+		\State $D_k \gets \begin{bmatrix}
 		D_k&d_{\text{new}}
 		\end{bmatrix}$
 	%\EndFor
@@ -2376,18 +2395,18 @@ In the case $\tilde{C}_\alpha$ and $\tilde{B}_\beta$ it also possible to use the
 		
 		%(d_stateo,d_statei)=A.shape
 		\State $U,s,V^\top \gets \text{reducedSVD}\left(\begin{bmatrix}
-		C[i_\text{out}:,:]&D[i_\text{out}:,:i_\text{in}]\\A&B[:,:i_\text{in}]
+		C_{[i_\text{out}:,:]}&D_{[i_\text{out}:,:i_\text{in}]}\\A&B_{[:,:i_\text{in}]}
 		\end{bmatrix}, \epsilon=\text{tol}\right)  $
 		\\
-		\State $\tilde{A}_\alpha \gets V^\top[:,:d_k] \Sigma_k^{-1}$
-		\State $\tilde{B}_\alpha \gets V^\top[:,d_k:]$
-		\State $\tilde{C}_\alpha \gets \tilde{C}_k[:i_\text{out},:] $
-		\State $\tilde{D}_\alpha \gets \tilde{D}_k[:i_\text{out},:i_\text{in}]$
+		\State $\tilde{A}_\alpha \gets V^\top_{[:,:d_k]} \Sigma_k^{-1}$
+		\State $\tilde{B}_\alpha \gets V^\top_{[:,d_k:]}$
+		\State $\tilde{C}_\alpha \gets \tilde{C}_{k[:i_\text{out},:]} $
+		\State $\tilde{D}_\alpha \gets \tilde{D}_{k[:i_\text{out},:i_\text{in}]}$
 		\\
-		\State $\tilde{A}_\beta \gets \Sigma_{k+1}^{-1} U[-d_{k+1}:,:]$
-		\State $\tilde{B}_\beta \gets \tilde{B}_k[:,i_\text{in}:]$
-		\State $\tilde{C}_\beta \gets  U[:-d_{k+1},:] $
-		\State $\tilde{D}_\beta \gets \tilde{D}[i_\text{out}:,i_\text{in}:] $		
+		\State $\tilde{A}_\beta \gets \Sigma_{k+1}^{-1} U_{[\en-d_{k+1}+1:,:]}$
+		\State $\tilde{B}_\beta \gets \tilde{B}_{k[:,i_\text{in}:]}$
+		\State $\tilde{C}_\beta \gets  U_{[:\en-d_{k+1},:]} $
+		\State $\tilde{D}_\beta \gets \tilde{D}_{[i_\text{out}:,i_\text{in}:]} $		
 		\\
 		\State $\Sigma_\beta \gets \diag(s)$
 	\end{algorithmic}
